Fixed center alignment of ‘Move to trash’ label. Also as it’s a destructive action, the button should also be red to be consistent with the rest of WordPress core.

--- a/editor/sidebar/post-trash/style.scss
+++ b/editor/sidebar/post-trash/style.scss
@@ -3,14 +3,16 @@
 	color: inherit;
 	flex-grow: 1;
 	text-align: right;
-
+	color: $red;
+	
 	.dashicon {
 		vertical-align: middle;
 		margin-right: -10px;
 		margin-left: 10px;
 	}
+}
 
-	&:hover {
-		color: $blue-medium-500;
-	}
+.editor-post-trash__label {
+	display: inline-block;
+	vertical-align: middle;
 }
